services main headers smaller font for mobile wrapping issue

--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -15,7 +15,7 @@
 }
 
 .header {
-    font-size: 2.75rem;
+    font-size: 2.5rem;
     width: 100%;
     font-weight: 500;
 }
